Fixed iOS dark mode issues

--- a/MobileFrontendV2/src/theme/variables.scss
+++ b/MobileFrontendV2/src/theme/variables.scss
@@ -150,11 +150,11 @@
    */
 
   .ios body {
-    --ion-background-color: #74bdb4;
-    --ion-background-color-rgb: 74,bd,b4;
+    --ion-background-color: #000000;
+    --ion-background-color-rgb: 0,0,0;
 
-    --ion-text-color: #747474;
-    --ion-text-color-rgb: 74,74,74;
+    --ion-text-color: #ffffff;
+    --ion-text-color-rgb: 255,255,255;
     --ion-border-color: #b4b4b4;
 
     --ion-color-step-50: #0d0d0d;
